# Proyecto_Crazyflie_dron

./: .gitignore
src/qupa_gazebo/: README.md
src/qupa_gazebo/qupa_behavior/: CMakeLists.txt  package.xml
src/qupa_gazebo/qupa_behavior/config/: qupa_dd.yaml  tam_seeker.yaml
src/qupa_gazebo/qupa_behavior/scripts/: qupa_monitoring.py  qupa_selective_strategy copy 2.py  qupa_selective_strategy copy.py  qupa_selective_strategy.py  tam_assign.py
src/qupa_gazebo/qupa_behavior/src/: tam_seeker.cpp
src/qupa_gazebo/qupa_description/: CMakeLists.txt  README.md  package.xml
src/qupa_gazebo/qupa_description/launch/: view_robot.launch
src/qupa_gazebo/qupa_description/meshes/: base.stl  body.stl  caster.dae  caster.stl  color.dae  color.stl  color_sensor.stl  infrared.dae  infrared.stl  mirror.stl  qupa.dae  qupa.stl  wheel.dae  wheel.stl
src/qupa_gazebo/qupa_description/rviz/: qupa.rviz
src/qupa_gazebo/qupa_description/urdf/: gazebo_plugins.xacro  qupa.xacro
src/qupa_gazebo/qupa_description/urdf/bases/: base.xacro
src/qupa_gazebo/qupa_description/urdf/sensors/: color.xacro  infrared.xacro  infrared_2.xacro  mirror.xacro
src/qupa_gazebo/qupa_description/urdf/wheels/: caster.xacro  wheel.xacro
src/qupa_gazebo/qupa_msgs/: CMakeLists.txt  package.xml
src/qupa_gazebo/qupa_msgs/msg/: ModelsList.msg  QupaTask.msg
src/qupa_gazebo/qupa_simulation/: CMakeLists.txt  README.md  package.xml
src/qupa_gazebo/qupa_simulation/config/: diff_drive_controller.yaml  multi_qupa.rviz  robots.yaml
src/qupa_gazebo/qupa_simulation/launch/: multi_qupa.launch  spawn_qupa_only.launch  tam_experiment.launch  tam_experiment_testing.launch  tam_test.launch
src/qupa_gazebo/qupa_simulation/launch/scripts/: tam_experiment_launch.py
src/qupa_gazebo/qupa_simulation/models/TAM/: model.config  model.sdf
src/qupa_gazebo/qupa_simulation/models/TAM/meshes/: TAM.stl
src/qupa_gazebo/qupa_simulation/models/paredes/: model.config  model.sdf
src/qupa_gazebo/qupa_simulation/models/paredes/material/: material.material
src/qupa_gazebo/qupa_simulation/models/paredes/meshes/: paredes.stl
src/qupa_gazebo/qupa_simulation/models/terrain/: model.config  model.sdf
src/qupa_gazebo/qupa_simulation/models/terrain/material/: material.material
src/qupa_gazebo/qupa_simulation/models/terrain/meshes/: terrain.stl
src/qupa_gazebo/qupa_simulation/src/: logical_camera_bridge.cpp  merge_odometry.cpp  tam_plugin.cpp
src/qupa_gazebo/qupa_simulation/worlds/: TAM_experiment.world  TAM_test.world  qupa_sim.world
src/qupa_gazebo/qupa_simulation/worlds/scripts/: generar_tam_hex_modular.py  tam_experiment.py
src/sim_cf/crazyflie-firmware/sitl_make/: CMakeLists.txt
src/sim_cf/crazyflie-firmware/src/utils/interface/: num.h
src/sim_cf/crazyflie_gazebo/launch/: cf2_color.launch  cf2_sim.launch  combined_simulation.launch  crazyflie_sim.launch  crazyflie_test_min.launch  swarm.launch
src/sim_cf/crazyflie_gazebo/models/matrice_100/: matrice_100-gen.sdf
src/sim_cf/crazyflie_gazebo/models/rotors_description/urdf/: crazyflie.xacro
src/sim_cf/crazyflie_gazebo/scripts/: fancy_traj.py  multi_color_follow.py  multi_generic.py  swarm_spawner.py
src/sim_cf/crazyflie_gazebo/worlds/: basic.world  salle_lix.world
