<?xml version="1.0"?>
<package format="2">
  <name>qupa_behavior</name>
  <version>0.0.1</version>
  <description>Paquete de comportamiento de exploración para Qupa</description>
  <maintainer email="davatorr@espol.edu.ec">David Torres</maintainer>
  <license>ESPOL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>qupa_msgs</depend>
  <depend>sensor_msgs</depend>
  

  <export>
  </export>
</package>
