<package format="2">
  <name>qupa_description</name>
  <version>1.0.0</version>
  <description>
    <p>Xacro Description package for qupa robot</p>
    <p>This package contains configuration data, 3D models and launch files for Qupa_Urdf robot</p>
  </description>
  <author>David Torres</author>
  <maintainer email="davatorr@espol.edu.ec" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>qupa_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_logical_camera_plugin_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>