<package format="2">
  <name>qupa_simulation</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Qupa_Urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for Qupa_Urdf robot</p>
  </description>
  <author>David Torres</author>
  <maintainer email="davatorr@espol.edu.ec" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>qupa_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>rospy</depend>
  <exec_depend>gazebo</exec_depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_dev</depend>
  <depend>qupa_description</depend>
  <export>
    <architecture_independent />
  </export>
</package>